Specify white-space: pre-wrap to avoid cutting off long lines
Fixes https://github.com/Debian/debiman/issues/85

--- a/assets/style.css
+++ b/assets/style.css
@@ -420,6 +420,9 @@ min-width: 200px;
     font-family: 'Inconsolata', monospace;
     font-size: 1.04rem;
 }
+.mandoc pre {
+    white-space: pre-wrap;
+}
 .mandoc {
     margin-right: 45px;
 
